<resources>
    <string name="app_name">Game Library - David</string>
    <string name="gameImageContentDescription">video game picture</string>
    <string name="gameTitleNotFound">Title not found</string>
    <string name="gameDescriptionNotFound">Description not found</string>
    <string name="gamePublisherLabel">Publisher: %s</string>
    <string name="gamePublisherNotFound">Publisher not found</string>
    <string name="gameDeveloperLabel">Developer %s</string>
    <string name="gameDeveloperNotFound">Developer not found</string>
    <string name="gameLibraryButtonDescription">Add or remove from game library</string>
    <string name="gameWIshListButtonDescription">add or remove game from wish list</string>
    <string name="errorLoadingLibraryGames">Error getting library games</string>
    <string name="errorLoadingLibrary">Error getting library games</string>
    <string name="detailsTitleNotFound">Title not Found</string>
    <string name="detailsDescriptionNotFound">No description found</string>
    <string name="multiplayerSupportUnkown">Multiplayer Support Unknown</string>
    <string name="multiplayerSupport">Multiplayer Support</string>
    <string name="controllerSupportUnkown">Controller Support Unknown</string>
    <string name="controllerSupportLabel">Controller Support</string>
    <string name="errorLoadingWishListGames">Error getting wish list games</string>
    <string name="allGameSpinnerOption">All Games</string>
    <string name="libraryGamesSpinnerOption">Your Library</string>
    <string name="wishListSpinnerOption">Your Wish List</string>
    <string name="allConsolesSpinnerOption">All Consoles</string>
    <string name="gameScreenshot">"Game Screenshot "</string>
    <string name="consoleIcon">Console Icon</string>
    <string name="detailScreenShotLabel">Screen Shots</string>
    <string name="errorGettingLibrary">Error getting library games</string>
    <string name="errorGettingWishList">Error getting wish list games</string>
    <string name="errorGettingConsoles">Error getting consoles</string>
    <string name="errorGettingGames">Error getting games</string>
    <string name="errorAddingGameToLibrary">Error adding game to library</string>
    <string name="gameAddedToLibrary">Game added to library</string>
    <string name="errorAddingGameWishList">Error adding game to Wish List</string>
    <string name="gameAddedToWishList">Game added to Wish List</string>
    <string name="errorRemovingGame">Error removing game</string>
    <string name="reviewUserNotFound">User not found</string>
    <string name="reviewTextNotFound">Review not found</string>
    <string name="reviewDateNotFound">Date not found</string>
    <string name="loginButton">Log In</string>
    <string name="actionSignOut">Sign Out</string>
    <string name="userProfilePictureDescription">User profile picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="libraryGamesLabel">Library Games</string>
    <string name="wishListGameLabel">Wish List Games</string>
    <string name="profilePictureDescription">Profile picture</string>
    <string name="errorLoadingProfilePage">Error Loading Profile Page</string>
    <string name="profileIdNotFound">Id not found</string>
    <string name="profileEmailNotFound">Email not found</string>
    <string name="profileVerificationNotFound">Verification Status not found</string>
    <string name="emailVerified">Email verified</string>
    <string name="emailNotVerified">Email not verified</string>
    <string name="titleNotFound">Title not found</string>
    <string name="releaseYearNotFound">Release year not found</string>
    <string name="userDetails">User Details</string>
    <string name="yourProfile">Your Profile</string>
    <string name="composeReview">Compose Review</string>
    <string name="gameDetails">Game Details</string>
    <string name="userProfilePicture">Profile Picture</string>
    <string name="errorLoadingUserProfile">Error Loading User profile</string>
    <string name="userProfileIdNotFound">Id not found</string>
    <string name="userProfileLastLoginUnknown">Last login not found</string>
    <string name="lastLoginLabel">Last login:</string>
    <string name="noLibraryGamesPlaceholder">No games in library</string>
    <string name="noWishListGamesPlaceholder">No games in wish list</string>
    <string name="ebayListingError">Error loading Ebay listings</string>
    <string name="spinnerPriceLabel">Price</string>
    <string name="spinnerRelevenceOption">Relevence</string>
    <string name="ebayPriceError">Price not found</string>
    <string name="ebayShippingCostError">Shipping cost not found</string>
    <string name="ebaySellerError">Seller not found</string>
    <string name="ebayConditionError">Condition not found</string>
    <string name="ebayLocationError">Item location not found</string>
    <string name="emptyWishList">No games in wish list</string>
    <string name="errorLoadingReviews">Error loading reviews</string>
    <string name="authError">Auth Error</string>
    <string name="gameDoesNotExist">Game does not exist</string>
    <string name="gameUpdated">Game updated.</string>
    <string name="errorGettingGame">Error getting game</string>
    <string name="noGameSelected">No Game Selected</string>
    <string name="errorDeletingReview">Error deleting review</string>
    <string name="reviewDeleted">Review deleted</string>
    <string name="authenticated">Authenticated</string>
    <string name="errorFindingGame">Error finding game</string>
    <string name="failedToUpload">Failed to upload</string>
    <string name="failedToDownload">Failed to get download URL.</string>
    <string name="errorUpdatingProfilePicture">Error updating profile picture</string>
    <string name="errorGettingUsers">Error getting users</string>
    <string name="userNotFound">No user found</string>
    <string name="userUpdated">User updated.</string>
    <string name="userDoesNotExist">User does not exist.</string>
    <string name="emptyReviewError">Review Text cannot be left blank</string>
    <string name="reviewAdded">Review added</string>
    <string name="errorPostingReviews">Error posting review</string>
    <string name="noConsoleError">Must select a console</string>
    <string name="errorUpdateingConsoles">Consoles failed to update</string>
    <string name="profilePhotoUpdated">Profile picture updated</string>
    <string name="consolesUpdated">Preferred consoles updated</string>
    <string name="displayNameNotFound">User display name not found</string>
    <string name="userIdNotFound">User id not found</string>
    <string name="noConsoleSelected">No consoles selected</string>
    <string name="noResultsFound">No results found</string>
    <string name="relevanceLabel">Relevance</string>
    <string name="reviewLabel">Reviews</string>
    <string name="link">Link:</string>
    <string name="avgPriceLabel">Average Price:</string>
    <string name="reviewButtonDescription">compose a review button</string>
    <string name="shareButtonDescription">Share game</string>
    <string name="ebayButtonDescription">Get ebay listings for a this game</string>
    <string name="unknownConsole">Unknown console</string>
    <string name="computer">Computer</string>
    <string name="nintendoSwitch">Nintendo Switch</string>
    <string name="playstation4">Playstation-4</string>
    <string name="xboxOne">Xbox-one</string>
    <string name="gameLibrary">Game Library</string>
    <string name="galleryButtonDescription">Update profile picture from gallery</string>
    <string name="cameraButtonDescription">Update profile picture from camera</string>
    <string name="preferredConsoles">Preferred Consoles</string>
    <string name="preferredConsolesButton">Set Consoles</string>
    <string name="reviewButtonHint">Enter review</string>
    <string name="composeReviewLabel">Publish</string>
    <string name="shareProfileButtonDescription">Share profile</string>
    <string name="xboxButtonDescription">Select xbox</string>
    <string name="playstationButtonDescription">Select Playstation</string>
    <string name="switchButtonDescription">Select Nintendo Switch</string>
    <string name="computerButtonDescription">Select computer</string>
    <string name="shippingCostLabel">Shipping Cost:</string>
    <string name="sellerLabel">Seller:</string>
    <string name="conditionLabel">Condition:</string>
    <string name="locationLabel">Location</string>
    <string name="priceLabel">Price:</string>
    <string name="ebayImageDescription">Ebay listing image</string>
    <string name="deleteReviewButtonDescription">Delete your review</string>
    <string name="userLabel">Users</string>
    <string name="shareGameMessage">Check this game out\n</string>
    <string name="emptyGameLibrary">No games in library</string>

    <plurals name="review">
        <item quantity="zero">reviews</item>
        <item quantity="one">review</item>
        <item quantity="other">reviews</item>
    </plurals>

    <string name="reviewCount">%d %s</string>
    <string name="linkNotFound">Link not found</string>
    <string name="homeLabel">Home</string>
    <string name="wishListConsoleChooser">Please choose your console(s) for your wish list</string>
    <string name="libraryConsoleChooser">Please choose your console(s) for your library</string>
    <string name="ebay400Error">Invalid search query</string>
    <string name="ebay401Error">Authorization token expired</string>
    <string name="ebay403Error">Permission denied</string>
    <string name="ebay404Error">API has moved</string>
    <string name="ebay429Error">server overloaded. Please try again tomorrow</string>
    <string name="ebay500Error">Server error. Please try again tomorrow</string>
    <string name="ebayUnknownError">HTTP STATUS: %d</string>
    <string name="confirmDeleteReview">Are you sure you want delete your review?</string>
    <string name="logoutConfirmation">Are you sure you want to log out?</string>
    <string name="userDisplayNameNotFound">User display name not found</string>
    <string name="shareProfileText">Check out %s "'s profile" + "\nhttps://my-game-list.com/user/"%s</string>
    <string name="prefferedConsoleChooser">Please choose preferred console(s)</string>
    <string name="noUserSelected">No User Selected</string>


    <string-array name="gameFilter">
        <item>All Games</item>
        <item>Wish List Games</item>
        <item>Library Games</item>
    </string-array>
</resources>