<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/game_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/composeReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="74dp"
        android:contentDescription="@string/reviewButtonDescription"
        android:src="@drawable/ic_leave_review" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ebayListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="125dp"
        android:contentDescription="@string/ebayButtonDescription"
        android:src="@drawable/ic_ebay" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"
        android:contentDescription="@string/shareButtonDescription"
        android:src="@drawable/ic_share" />

</FrameLayout>

