<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">

    <TextView
        android:id="@+id/userProfileDisplayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileErrorMessage"
        tools:text="Display Name" />

    <ImageView
        android:id="@+id/userProfileProfilePicture"
        android:layout_width="@dimen/profilePictureWidth"
        android:layout_height="@dimen/profilePictureHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileDisplayName"
        app:srcCompat="@drawable/ic_broken_image"
        android:contentDescription="@string/profilePictureDescription" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userProfileProfilePicture"
        app:layout_constraintTop_toTopOf="@+id/userProfileProfilePicture"
        tools:text="abc@example.com" />

    <TextView
        android:id="@+id/userProfileUserId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userProfileProfilePicture"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail"
        tools:text="asdf;lkajflk" />

    <TextView
        android:id="@+id/userProfileLastLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userProfileProfilePicture"
        app:layout_constraintTop_toBottomOf="@+id/userProfileUserId"
        tools:text="Last Login: MM/MM/MMMM" />

    <TextView
        android:id="@+id/userProfileErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Error "
        android:textColor="?attr/colorError"/>

    <TextView
        android:id="@+id/userProfileLibraryGamesLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/libraryGamesLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferredConsoleButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userProfileLibraryList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileLibraryPlaceholder" />

    <TextView
        android:id="@+id/userProfileWishListGameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/wishListGameLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileLibraryList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userProfileWishList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileWishListPlaceholder" />

    <TextView
        android:id="@+id/userProfileLibraryPlaceholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileLibraryGamesLabel" />

    <TextView
        android:id="@+id/userProfileWishListPlaceholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileWishListGameLabel" />

    <ImageButton
        android:id="@+id/galleryButton"
        style="@style/WidgetOverlay.Secondary"
        android:layout_width="@dimen/galleryButtonSize"
        android:layout_height="@dimen/galleryButtonSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/galleryButtonDescription"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileProfilePicture"
        app:srcCompat="@drawable/ic_gallery_solid" />

    <ImageButton
        android:id="@+id/cameraButton"
        style="@style/WidgetOverlay.Secondary"
        android:layout_width="@dimen/cameraButtonSize"
        android:layout_height="@dimen/cameraButtonSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cameraButtonDescription"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/galleryButton"
        app:layout_constraintTop_toBottomOf="@+id/userProfileProfilePicture"
        app:srcCompat="@drawable/ic_camera_solid_2" />

    <TextView
        android:id="@+id/preferredConsoleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/preferredConsoles"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton" />

    <Button
        android:id="@+id/preferredConsoleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/preferredConsolesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferredConsolePlaceholder" />

    <ImageView
        android:id="@+id/preferredConsoleOne"
        android:layout_width="@dimen/consoleIconSize"
        android:layout_height="@dimen/consoleIconSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferredConsoleLabel"
        app:srcCompat="@drawable/ic_downloading"
        android:contentDescription="@string/consoleIcon" />

    <ImageView
        android:id="@+id/preferredConsoleTwo"
        android:layout_width="@dimen/consoleIconSize"
        android:layout_height="@dimen/consoleIconSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/preferredConsoleOne"
        app:layout_constraintTop_toBottomOf="@+id/preferredConsoleLabel"
        app:srcCompat="@drawable/ic_downloading"
        android:contentDescription="@string/consoleIcon"/>

    <ImageView
        android:id="@+id/preferredConsoleThree"
        android:layout_width="@dimen/consoleIconSize"
        android:layout_height="@dimen/consoleIconSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/preferredConsoleTwo"
        app:layout_constraintTop_toBottomOf="@+id/preferredConsoleLabel"
        app:srcCompat="@drawable/ic_downloading"
        android:contentDescription="@string/consoleIcon"/>

    <ImageView
        android:id="@+id/preferredConsoleFour"
        android:layout_width="@dimen/consoleIconSize"
        android:layout_height="@dimen/consoleIconSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/preferredConsoleThree"
        app:layout_constraintTop_toBottomOf="@+id/preferredConsoleLabel"
        app:srcCompat="@drawable/ic_downloading"
        android:contentDescription="@string/consoleIcon"/>

    <TextView
        android:id="@+id/preferredConsolePlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferredConsoleOne"
        tools:text="No consoles found" />

</androidx.constraintlayout.widget.ConstraintLayout>